feat: create gitactions deploy vercel

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:unit": "jest --watchAll",
+    "test:unit": "jest",
+    "test:unit:watch": "jest --watchAll",
     "test:unit:coverage": "jest --coverage",
     "test:e2e": "cypress open",
     "test:e2e:headless": "cypress run --browser chrome --headless"
