refactor: gitactions deploy

--- a/.github/workflows/deploy-vercel.yml
+++ b/.github/workflows/deploy-vercel.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   vercel: 
     runs-on: ubuntu-latest
-    name: "Deploy vercel"
+    name: "Deploy"
 
     steps:
       - uses: actions/checkout@v2
