--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "vercel": "^23.1.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
