--- a/.github/workflows/janapc-test-e2e.yml
+++ b/.github/workflows/janapc-test-e2e.yml
@@ -18,7 +18,7 @@ jobs:
       - run: npm install
 
       - name: Run tests
-        uses: cypress-io/github-action@v2
+      - uses: cypress-io/github-action@v2
         with:
           browser: chrome
           headless: true
