--- a/.github/workflows/deploy-vercel.yml
+++ b/.github/workflows/deploy-vercel.yml
@@ -10,16 +10,13 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     steps:
-      - name: Build
-      - uses: actions/checkout@v2 
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
       - run: npm install
-      - run: npm run build
-
+      - run: npm build
   deploy:
     needs: build
     runs-on: ubuntu-latest
