refactor: implementaion tests in deploy vercel

--- a/.github/workflows/deploy-vercel.yml
+++ b/.github/workflows/deploy-vercel.yml
@@ -8,7 +8,40 @@ on:
     branches: [ $default-branch ]
 
 jobs:
-  vercel: 
+ jest:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [13.x]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+    -uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm install
+    - run: npm run test:unit --if-present
+
+  cypress:
+    needs: jest
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+
+    steps:
+      - uses: actions/checkout@v2 
+      - run: npm install
+
+      - name: Run tests
+      - uses: cypress-io/github-action@v2
+        with:
+          browser: chrome
+          headless: true
+          start: npm run dev
+          wait-on: http://localhost:3000
+  vercel:
+    needs: cypress
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2     
