--- a/.github/workflows/deploy-vercel.yml
+++ b/.github/workflows/deploy-vercel.yml
@@ -1,26 +1,34 @@
 name: Deploy Vercel
 
-on: workflow_dispatch
+on: 
+  workflow_dispatch:
+  push:
+    branches: [ $default-branch ]
 
 jobs:
-  jest:
+  test-jest:
     name: tests unit
-    steps:
-      - uses: ./.github/workflows/janapc-test-unit.yml
-  cypress:
-    name: tests e2e
-    steps:
-      - uses: ./.github/workflows/janapc-test-e2e.yml
-
-  vercel:
-    needs: [jest, cypress]
     runs-on: ubuntu-latest
+    environment: prod
     steps:
-      - uses: actions/checkout@v2     
-      - name: deploy site to vercel      
+      - uses: ./.github/workflows/tests-unit.yml
+      
+  test-cypress:
+    name: tests e2e
+    runs-on: ubuntu-latest
+    environment: prod
+    steps:
+      - uses: ./.github/workflows/tests-e2e.yml
+
+  deploy-production:
+    needs: [test-jest, test-cypress]
+    runs-on: ubuntu-latest
+    environment: prod
+    steps:
+      - uses: actions/checkout@v2
       - uses: amondnet/vercel-action@v20
         with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-token: ${{ env.VERCEL_TOKEN }}
           vercel-args: '--prod'
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID}}
+          vercel-org-id: ${{ env.VERCEL_ORG_ID }}
+          vercel-project-id: ${{ env.VERCEL_PROJECT_ID }}
